name:                shadower
version:             0.1.0.1
synopsis:            An automated way to run doctests in files that are changing
description:         An automated way to run doctests in files that are changing
license:             PublicDomain
license-file:        LICENSE
author:              Karun Ramakrishnan
maintainer:          karun012@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.10

executable shadower
  default-language:   Haskell2010
  build-depends:      base >4 && <5, fsnotify, process, system-filepath, text, filemanip, MissingH, doctest
  main-is:            Shadower.hs 
  HS-Source-Dirs:     src
